Fixer un bug d'affichage dans lequel il y avait du overlap

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -325,12 +325,13 @@ main {
   position: relative;
   height: 290px;
   margin-top: 26px;
+  overflow: hidden;
 }
 
 .chart-wrap svg {
   width: 100%;
   height: 100%;
-  overflow: visible;
+  overflow: hidden;
 }
 
 .chart-empty {
